# three-body-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run_server.py  start_server.bat
app/: main.py
app/agents/orchestration/: tool_orchestrator.py  workflow.py
app/agents/persona/: __init__.py  intent_router.py  luoji_agent.py  middleware.py  persona_agent.py  role_profile.py  timeline_state.py  wangmiao_agent.py  yewenjie_agent.py  zhangbeihai_agent.py
app/api/v1/: archives.py  auth.py  characters.py  chat.py
app/core/: security.py
app/core/config/: settings.py
app/core/prompts/: consistency_prompts.py  persona_prompts.py  rag_prompts.py
app/memory/: tools.py
app/memory/consistency/: __init__.py  persona_checker.py
app/memory/long_term/: __init__.py  (+3 more)
app/models/: character.py  conversation.py
app/schemas/: archive.py  auth.py  character.py  chat.py
app/services/: archive_service.py  chat_service.py
app/utils/: logger.py
data/archives/: README.md
data/indexes/: README.md
data/raw/: manifest.json
frontend/: README.md  agents.html  login.html  luoji-chat.html  wangmiao-chat.html  yewenjie-chat.html  zhangbeihai-chat.html
frontend/components/: README.md
frontend/pages/: README.md
frontend/static/: agents.css  agents.js  global-music.css  global-music.js  login.css  login.js  luoji-chat.css  luoji-chat.js
frontend/stores/: README.md
scripts/: build_indexes.py  chat_luoji_agent.py  enhance_luoji_persona_from_novel.py  ingest_data.py  init_mysql.py  test_chat_memory.py  test_luoji_create_agent.py
tests/fixtures/: README.md
(+45 files in other folders)
