[project]
name = "jupyterproject"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.2.4",
    "create-agent>=0.0.3",
    "dashscope>=1.25.12",
    "fastapi>=0.128.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-mineru>=0.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph-api>=0.7.60",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "logger>=1.4",
    "matplotlib>=3.11.0",
    "mineru-open-sdk>=0.2.5",
    "notebook>=7.5.2",
    "openai>=2.15.0",
    "pandas>=3.0.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=6.4.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tavily-python>=0.7.22",
    "tool>=0.8.0",
    "uvicorn>=0.40.0",
]


[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
